--- a/src/main/webapp/common/template.xhtml
+++ b/src/main/webapp/common/template.xhtml
@@ -19,30 +19,31 @@
     </h:head>
 
     <h:body>
-        <h:form>
+                <h:form>
 
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/project1/faces/main.xhtml">Bungalow park</a>
-                    </div>
-                    <!-- A command-action must always be in a form, it also updates all the data in the form.-->
-                    <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <!-- Hide all the links if the user has not logged in! -->
-                            <ui:fragment rendered="${sessionDto.userDto.loggedIn}"> 
+                        <div class="container">
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                                <a class="navbar-brand" href="/project1/faces/main.xhtml">Bungalow park</a>
+                            </div>
+                            <!-- A command-action must always be in a form, it also updates all the data in the form.-->
+                            <div id="navbar" class="navbar-collapse collapse">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <!-- Hide all the links if the user has not logged in! -->
+                                    <ui:fragment rendered="${sessionDto.userDto.loggedIn}"> 
                                 <li><a href="#">Material Management</a>
                                     <ul>
                                         <li><a href="/project1/faces/equipmentrent/List.xhtml">Equipment&#160;Rent</a></li>
                                         <li><a href="/project1/faces/supplier/List.xhtml">Suppliers</a></li>
+                                        <li><a href="/project1/faces/material/List.xhtml">Material</a></li>
                                         <li><a href="/project1/faces/supplierMaterial/List.xhtml">Supplier&#160;Material</a></li>
                                         <li><a href="/project1/faces/availability/List.xhtml">Availability</a></li>
                                         <li><a href="/project1/faces/warehouse/List.xhtml">Warehouse</a></li>
@@ -51,10 +52,6 @@
                                 <li><a href="#">Clients</a>
                                     <ul>
                                         <li><a href="/project1/faces/client/List.xhtml">Clients</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Reservations</a>
-                                    <ul>
                                         <li><a href="/project1/faces/reservation/List.xhtml">Reservations</a></li>
                                     </ul>
                                 </li>
@@ -69,14 +66,14 @@
                                     <h:commandLink action="${login.logout()}">Logout</h:commandLink>
                                 </li>
                             </ui:fragment>
-                            <ui:fragment rendered="${!sessionDto.userDto.loggedIn}">
-                                <li><a href="/project1/faces/login.xhtml">Login</a></li>
-                            </ui:fragment>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </h:form>
+                                    <ui:fragment rendered="${!sessionDto.userDto.loggedIn}">
+                                        <li><a href="/project1/faces/login.xhtml">Login</a></li>
+                                    </ui:fragment>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </h:form>
 
         <div class="jumbotron">
             <div class="container">
@@ -87,8 +84,6 @@
         <div class="container">
             <ui:insert name="content" id="content"></ui:insert>
         </div>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     </h:body>
 
