--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="navbar">
-        <h2>Park Admin - Materialmanagement</h2>
+        <h2>Parc Admin - Materialmanagement</h2>
         <ui:fragment rendered="${!sessionDto.userDto.loggedIn}"><h4>Please login ...</h4></ui:fragment>
             ${index.dto.name}
     </ui:define>
