--- a/src/main/webapp/supplier/Create.xhtml
+++ b/src/main/webapp/supplier/Create.xhtml
@@ -14,15 +14,15 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{supplierController.selected != null}">
                         <p:outputLabel value="#{bundle.CreateSupplierLabel_address}" for="address" />
-                        <p:inputText id="address" value="#{supplierController.selected.address}" title="#{bundle.CreateSupplierTitle_address}" />
+                        <p:inputText id="address" required="true" value="#{supplierController.selected.address}" title="#{bundle.CreateSupplierTitle_address}" />
                         <p:outputLabel value="#{bundle.CreateSupplierLabel_bedrijfsnaam}" for="bedrijfsnaam" />
-                        <p:inputText id="bedrijfsnaam" value="#{supplierController.selected.bedrijfsnaam}" title="#{bundle.CreateSupplierTitle_bedrijfsnaam}" />
+                        <p:inputText id="bedrijfsnaam" required="true" value="#{supplierController.selected.bedrijfsnaam}" title="#{bundle.CreateSupplierTitle_bedrijfsnaam}" />
                         <p:outputLabel value="#{bundle.CreateSupplierLabel_contactpersoon}" for="contactpersoon" />
-                        <p:inputText id="contactpersoon" value="#{supplierController.selected.contactpersoon}" title="#{bundle.CreateSupplierTitle_contactpersoon}" />
+                        <p:inputText id="contactpersoon" required="true" value="#{supplierController.selected.contactpersoon}" title="#{bundle.CreateSupplierTitle_contactpersoon}" />
                         <p:outputLabel value="#{bundle.CreateSupplierLabel_phone}" for="phone" />
-                        <p:inputText id="phone" value="#{supplierController.selected.phone}" title="#{bundle.CreateSupplierTitle_phone}" />
+                        <p:inputText id="phone" required="true" value="#{supplierController.selected.phone}" title="#{bundle.CreateSupplierTitle_phone}" />
                         <p:outputLabel value="#{bundle.CreateSupplierLabel_zip}" for="zip" />
-                        <p:inputText id="zip" value="#{supplierController.selected.zip}" title="#{bundle.CreateSupplierTitle_zip}" />
+                        <p:inputText id="zip" required="true" value="#{supplierController.selected.zip}" title="#{bundle.CreateSupplierTitle_zip}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{supplierController.create}" value="#{bundle.Save}" update="display,:SupplierListForm:datalist,:growl" oncomplete="handleSubmit(args,'SupplierCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="SupplierCreateDialog.hide()"/>
