--- a/src/main/webapp/supplier/Edit.xhtml
+++ b/src/main/webapp/supplier/Edit.xhtml
@@ -15,15 +15,15 @@
                     <h:inputHidden id="supplierid" value="#{supplierController.selected.supplierid}"/>
                     <p:panelGrid columns="2" rendered="#{supplierController.selected != null}">
                         <p:outputLabel value="#{bundle.EditSupplierLabel_address}" for="address" />
-                        <p:inputText id="address" value="#{supplierController.selected.address}" title="#{bundle.EditSupplierTitle_address}" />
+                        <p:inputText id="address" required="true" value="#{supplierController.selected.address}" title="#{bundle.EditSupplierTitle_address}" />
                         <p:outputLabel value="#{bundle.EditSupplierLabel_bedrijfsnaam}" for="bedrijfsnaam" />
-                        <p:inputText id="bedrijfsnaam" value="#{supplierController.selected.bedrijfsnaam}" title="#{bundle.EditSupplierTitle_bedrijfsnaam}" />
+                        <p:inputText id="bedrijfsnaam" required="true" value="#{supplierController.selected.bedrijfsnaam}" title="#{bundle.EditSupplierTitle_bedrijfsnaam}" />
                         <p:outputLabel value="#{bundle.EditSupplierLabel_contactpersoon}" for="contactpersoon" />
-                        <p:inputText id="contactpersoon" value="#{supplierController.selected.contactpersoon}" title="#{bundle.EditSupplierTitle_contactpersoon}" />
+                        <p:inputText id="contactpersoon" required="true" value="#{supplierController.selected.contactpersoon}" title="#{bundle.EditSupplierTitle_contactpersoon}" />
                         <p:outputLabel value="#{bundle.EditSupplierLabel_phone}" for="phone" />
-                        <p:inputText id="phone" value="#{supplierController.selected.phone}" title="#{bundle.EditSupplierTitle_phone}" />
+                        <p:inputText id="phone" required="true" value="#{supplierController.selected.phone}" title="#{bundle.EditSupplierTitle_phone}" />
                         <p:outputLabel value="#{bundle.EditSupplierLabel_zip}" for="zip" />
-                        <p:inputText id="zip" value="#{supplierController.selected.zip}" title="#{bundle.EditSupplierTitle_zip}" />
+                        <p:inputText id="zip" required="true" value="#{supplierController.selected.zip}" title="#{bundle.EditSupplierTitle_zip}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{supplierController.update}" value="#{bundle.Save}" update="display,:SupplierListForm:datalist,:growl" oncomplete="handleSubmit(args, 'SupplierEditDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="SupplierEditDialog.hide()"/>
