--- a/src/main/webapp/supplierMaterial/List.xhtml
+++ b/src/main/webapp/supplierMaterial/List.xhtml
@@ -16,44 +16,63 @@
 
         <ui:define name="body">
             <h:form id="SupplierMaterialListForm">
-                <p:panel header="#{bundle.ListSupplierMaterialTitle}">
-                    <p:dataTable id="datalist" value="#{supplierMaterialController.items}" var="item"
-                                 selectionMode="single" selection="#{supplierMaterialController.selected}"
-                                 paginator="true"
-                                 rowKey="#{item.supplierMaterialPK}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
 
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                <p:dataTable id="datalist" value="#{supplierMaterialController.items}" var="item"
+                             selectionMode="single" selection="#{supplierMaterialController.selected}"
+                             paginator="true"
+                             rowKey="#{item.suppliermaterialid}"
+                             rows="10"
+                             rowsPerPageTemplate="10,20,30,40,50"
+                             >
 
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSupplierMaterialTitle_experiencenote}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.experiencenote}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSupplierMaterialTitle_supplier}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.supplier}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSupplierMaterialTitle_material}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.material}"/>
-                        </p:column>
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{supplierMaterialController.prepareCreate}" update=":SupplierMaterialCreateForm" oncomplete="PF('SupplierMaterialCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SupplierMaterialViewForm" oncomplete="PF('SupplierMaterialViewDialog').show()" disabled="#{empty supplierMaterialController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SupplierMaterialEditForm" oncomplete="PF('SupplierMaterialEditDialog').show()" disabled="#{empty supplierMaterialController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{supplierMaterialController.destroy}" update=":growl,datalist" disabled="#{empty supplierMaterialController.selected}"/>
+                    <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
+                    <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+
+                    <p:column sortBy="#{item.experiencenote}" filterBy="#{item.experiencenote}" >
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListSupplierMaterialTitle_experiencenote}"/>
                         </f:facet>
-                    </p:dataTable>
-                </p:panel>
+                        <h:outputText value="#{item.experiencenote}"/>
+                    </p:column>
+                    <p:column sortBy="#{item.supplier}" filterBy="#{item.supplier}">
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListSupplierMaterialTitle_supplier}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.supplier}"/>
+                    </p:column>
+                    <p:column sortBy="#{item.material}" filterBy="#{item.material}">
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListSupplierMaterialTitle_material}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.material}"/>
+                    </p:column>
+                    <f:facet name="footer">
+                        <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{supplierMaterialController.prepareCreate}" update=":SupplierMaterialCreateForm" oncomplete="PF('SupplierMaterialCreateDialog').show()"/>
+                        <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SupplierMaterialViewForm" oncomplete="PF('SupplierMaterialViewDialog').show()" disabled="#{empty supplierMaterialController.selected}"/>
+                        <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SupplierMaterialEditForm" oncomplete="PF('SupplierMaterialEditDialog').show()" disabled="#{empty supplierMaterialController.selected}"/>
+                        <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{supplierMaterialController.destroy}" update=":growl,datalist" disabled="#{empty supplierMaterialController.selected}"/>
+                    </f:facet>
+                </p:dataTable>
+                <br /><br />
+                <h:commandLink>
+                    <p:graphicImage name="img/excel.png" />
+                    <p:dataExporter type="xls" target="datalist" fileName="#{bundle.ListSupplierMaterialTitle}" pageOnly="true"/>
+                </h:commandLink>
+
+                <h:commandLink>
+                    <p:graphicImage name="img/pdf.png" />
+                    <p:dataExporter type="pdf" target="datalist" fileName="#{bundle.ListSupplierMaterialTitle}" pageOnly="true" />
+                </h:commandLink>
+
+                <h:commandLink>
+                    <p:graphicImage name="img/csv.png" />
+                    <p:dataExporter type="csv" target="datalist" fileName="#{bundle.ListSupplierMaterialTitle}" pageOnly="true" />
+                </h:commandLink>
+
+                <h:commandLink>
+                    <p:graphicImage name="img/xml.png" />
+                    <p:dataExporter type="xml" target="datalist" fileName="#{bundle.ListSupplierMaterialTitle}" pageOnly="true" />
+                </h:commandLink>
             </h:form>
 
             <ui:include src="Create.xhtml"/>
