--- a/src/main/webapp/users/Edit.xhtml
+++ b/src/main/webapp/users/Edit.xhtml
@@ -12,13 +12,12 @@
         <p:dialog id="UsersEditDlg" widgetVar="UsersEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditUsersTitle}">
             <h:form id="UsersEditForm">
                 <h:panelGroup id="display">
+                    <h:inputHidden id="userid" value="#{usersController.selected.userid}"/>                    
                     <p:panelGrid columns="2" rendered="#{usersController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditUsersLabel_userid}" for="userid" />
-                        <p:inputText id="userid" value="#{usersController.selected.userid}" title="#{bundle.EditUsersTitle_userid}" required="true" requiredMessage="#{bundle.EditUsersRequiredMessage_userid}"/>
                         <p:outputLabel value="#{bundle.EditUsersLabel_username}" for="username" />
-                        <p:inputText id="username" value="#{usersController.selected.username}" title="#{bundle.EditUsersTitle_username}" />
+                        <p:inputText id="username" required="true" value="#{usersController.selected.username}" title="#{bundle.EditUsersTitle_username}" />
                         <p:outputLabel value="#{bundle.EditUsersLabel_userpassword}" for="userpassword" />
-                        <p:inputText id="userpassword" value="#{usersController.selected.userpassword}" title="#{bundle.EditUsersTitle_userpassword}" />
+                        <p:inputText id="userpassword" required="true" value="#{usersController.selected.userpassword}" title="#{bundle.EditUsersTitle_userpassword}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{usersController.update}" value="#{bundle.Save}" update="display,:UsersListForm:datalist,:growl" oncomplete="handleSubmit(args, 'UsersEditDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="UsersEditDialog.hide()"/>
